# interchange-squeeze-eu-debit

./: .gitignore  README.md  pyproject.toml
src/interchange_squeeze/: __init__.py  __main__.py  cli.py  models.py  scenarios.py  tui.py  value.py
tests/: test_models.py  test_scenarios.py  test_tui.py  test_value.py
