[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interchange-squeeze"
version = "0.1.0"
description = "European debit pricing strategy analysis tool — interchange fee dynamics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
interchange-squeeze = "interchange_squeeze.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interchange_squeeze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
